# rbac-control-panel

./: Cargo.toml  Config.toml  README.md
src/: config.rs  controller.rs  main.rs
www/: index.html
