[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["rc"] }
serde_json = "1.0.79"
#rmp-serde = "1.0.0"
serde_derive = "1.0.136"
toml = "0.5.9"
rusqlite = { version = "0.28.0", features = ["bundled"] }
hyper = { version = "0.14", features = ["full"] }
warp = "0.3"
anyhow = "1.0.66"
serde_rusqlite = "0.31.0"
lazy_static = "1.4.0"
uuid = { version = "1.2.1", features = ["v4"] }
nixinfo = "0.3.3"
parking_lot = "0.12.1"
